--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -35,24 +35,21 @@
     </item>
     <item row="1" column="0">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="3">
-       <widget class="QListWidget" name="listWidget"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QTreeWidget" name="treeWidget"/>
-      </item>
       <item row="0" column="2">
-       <widget class="QQuickWidget" name="quickWidget">
+       <widget class="QWidget" name="widget" native="true">
         <property name="minimumSize">
          <size>
           <width>600</width>
           <height>400</height>
          </size>
         </property>
-        <property name="resizeMode">
-         <enum>QQuickWidget::SizeRootObjectToView</enum>
-        </property>
        </widget>
+      </item>
+      <item row="0" column="3">
+       <widget class="QListWidget" name="listWidget"/>
+      </item>
+      <item row="0" column="1">
+       <widget class="QTreeWidget" name="treeWidget"/>
       </item>
      </layout>
     </item>
@@ -112,13 +109,6 @@
    </property>
   </action>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>QQuickWidget</class>
-   <extends>QWidget</extends>
-   <header>QtQuickWidgets/QQuickWidget</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
