dynamic component types

--- a/ui/addcomponentwindow.ui
+++ b/ui/addcomponentwindow.ui
@@ -18,36 +18,15 @@
     <layout class="QFormLayout" name="formLayout">
      <item row="1" column="1">
       <widget class="QComboBox" name="comboBox">
-       <item>
-        <property name="text">
-         <string>Detector</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Monitor</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Source</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Slit</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Moderator</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Disk chopper</string>
-        </property>
-       </item>
+       <property name="editable">
+        <bool>false</bool>
+       </property>
+       <property name="currentIndex">
+        <number>-1</number>
+       </property>
+       <property name="maxVisibleItems">
+        <number>40</number>
+       </property>
       </widget>
      </item>
      <item row="3" column="0">
