--- a/ui/componentdetails.ui
+++ b/ui/componentdetails.ui
@@ -37,7 +37,7 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="lineEdit_2"/>
+     <widget class="QLineEdit" name="componentNameField"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
@@ -47,7 +47,7 @@
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QLineEdit" name="lineEdit"/>
+     <widget class="QLineEdit" name="DescriptionField"/>
     </item>
     <item row="2" column="0" colspan="2">
      <widget class="QGroupBox" name="TransformsBox">
