--- a/ui/addcomponentwindow.ui
+++ b/ui/addcomponentwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>225</width>
+    <width>232</width>
     <height>139</height>
    </rect>
   </property>
@@ -17,7 +17,7 @@
    <item row="0" column="0" colspan="2">
     <layout class="QFormLayout" name="formLayout">
      <item row="1" column="1">
-      <widget class="QComboBox" name="comboBox">
+      <widget class="QComboBox" name="ComponentTypeComboBox">
        <property name="editable">
         <bool>false</bool>
        </property>
@@ -37,7 +37,7 @@
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QComboBox" name="comboBox_2">
+      <widget class="QComboBox" name="GeometryTypeComboBox">
        <item>
         <property name="text">
          <string>Mesh</string>
@@ -56,7 +56,7 @@
       </widget>
      </item>
      <item row="5" column="1">
-      <widget class="QComboBox" name="comboBox_3">
+      <widget class="QComboBox" name="PixelTypeComboBox">
        <item>
         <property name="text">
          <string>Single ID</string>
