--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,75 +6,99 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1109</width>
-    <height>590</height>
+    <width>1141</width>
+    <height>599</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>NeXus Constructor</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_2">
-    <item row="0" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>NeXus file structure</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButton">
-        <property name="text">
-         <string>Add component</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item row="1" column="0">
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="3">
-       <widget class="QListWidget" name="listWidget"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QTreeWidget" name="treeWidget">
-        <column>
-         <property name="text">
-          <string notr="true">1</string>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>6</x>
+      <y>6</y>
+      <width>1101</width>
+      <height>531</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetDefaultConstraint</enum>
+     </property>
+     <item>
+      <widget class="QTabWidget" name="tabWidget">
+       <property name="currentIndex">
+        <number>0</number>
+       </property>
+       <widget class="QWidget" name="tab">
+        <attribute name="title">
+         <string>Tab 1</string>
+        </attribute>
+        <widget class="QWidget" name="verticalLayoutWidget">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>502</width>
+           <height>481</height>
+          </rect>
          </property>
-        </column>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <widget class="QPushButton" name="pushButton">
+            <property name="text">
+             <string>Add component</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QListView" name="listView"/>
+          </item>
+         </layout>
+        </widget>
        </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QQuickWidget" name="quickWidget">
-        <property name="minimumSize">
-         <size>
-          <width>500</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="resizeMode">
-         <enum>QQuickWidget::SizeRootObjectToView</enum>
-        </property>
-        <property name="source">
-         <url>
-          <string>file:./view.qml</string>
-         </url>
-        </property>
+       <widget class="QWidget" name="tab_2">
+        <attribute name="title">
+         <string>Tab 2</string>
+        </attribute>
        </widget>
-      </item>
-     </layout>
-    </item>
-   </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QQuickWidget" name="quickWidget">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>500</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="resizeMode">
+        <enum>QQuickWidget::SizeRootObjectToView</enum>
+       </property>
+       <property name="source">
+        <url>
+         <string>file:./view.qml</string>
+        </url>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1109</width>
+     <width>1141</width>
      <height>19</height>
     </rect>
    </property>
@@ -86,15 +110,7 @@
     <addaction name="actionExport_to_NeXus_file"/>
     <addaction name="actionExport_to_Filewriter_JSON"/>
    </widget>
-   <widget class="QMenu" name="menuJSON">
-    <property name="title">
-     <string>JSON</string>
-    </property>
-    <addaction name="actionShow_Filewriter_JSON"/>
-    <addaction name="actionHide_JSON_Pane"/>
-   </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuJSON"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionShow_Filewriter_JSON">
