--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -34,7 +34,7 @@
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
-         <string>Tab 1</string>
+         <string>NeXus Geometry</string>
         </attribute>
         <widget class="QWidget" name="verticalLayoutWidget">
          <property name="geometry">
@@ -61,7 +61,7 @@
        </widget>
        <widget class="QWidget" name="tab_2">
         <attribute name="title">
-         <string>Tab 2</string>
+         <string>Transformations?</string>
         </attribute>
        </widget>
       </widget>
